fix: gps page title contrast (from light red to dark red)

--- a/src/pages/gps/gps.scss
+++ b/src/pages/gps/gps.scss
@@ -3,7 +3,7 @@
     font-family: 'Great Vibes', sans-serif;
     font-size: 3rem;
     margin-bottom: 0.5rem;
-    color: var(--light-red);
+    color: var(--dark-red);
   }
   &__subtitle {
     display: inline-block;
